# tilli-prompts

./: .gitignore  GIT_SUBMODULE_SETUP.md  NEXT_STEPS.md  PUSH_TO_GITHUB.md  QUICK_PUSH.md  README.md  README_SUBMODULE.md  SETUP_SUBMODULE.md  START_SEAL_AND_PROMPT_EVAL.md  pyproject.toml  setup.py
tilli_prompts/: __init__.py
tilli_prompts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tilli_prompts/config/: __init__.py  models.py
tilli_prompts/logging/: __init__.py  csv_logger.py
tilli_prompts/prompts/: __init__.py  curriculum.py  intervention.py
tilli_prompts/schemas/: __init__.py  base.py  curriculum.py
